# bark-push

./: .gitignore  README.md  gen_icons.py  package-lock.json  package.json
.github/workflows/: build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bark.rs  crypto.rs  main.rs  store.rs  types.rs
ui/: index.html
ui/css/: style.css
ui/js/: app.js
